# plover-uinput-output

./: README.md  setup.cfg
plover_uinput_output/: __init__.py  set_xkb_alias.py  subprocess_run.py
