[metadata]
name = plover-uinput-output
version = 0.0.0
author = user202729
description = Plover plugin to output with uinput (Linux systems) instead of xtest
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-uinput-output
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
install_requires =
    plover>=4.0.0.dev8
packages = plover_uinput_output

[options.entry_points]
plover.extension =
	plover_uinput_output = plover_uinput_output:Main
plover.output =
	plover_uinput_output = plover_uinput_output:KeyboardEmulation
